ajustes de tela

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <main class="container">
     <section class="section-1 container">
         <h1 class="title1">Tabela IMC</h1>
         <div class="section-content">
@@ -50,6 +51,7 @@
         <div class="result-imc" id="r-imc">
         </div>
     </section>
+</main>
 
     <script src="assets/js/main.js"></script>
 </body>
